--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -7,31 +7,48 @@
 
 <body>
 
-    <div id="app">
-        <p>{{ message }}</p>
-        <button v-on:click="reverseMessage">Reverse Message</button>
-    </div>
+    <h1>Spotify API Stuff</h1>
 
-    <div id="app-6">
-        <input v-model="message">
-      </div>
-
-    <div id="spotify-top-tracks">
+    <h3>Find your most played tracks</h3>
+    <div id="spotify-top-tracks" class="tableview">
         <button v-on:click="downloadTopTracks">Get your most popular recent tracks</button>
-        <ol>
+        <select v-model="timeframe">
+            <option disabled value="">Please select a timeframe</option>
+            <option>short_term</option>
+            <option>medium_term</option>
+            <option>long_term</option>
+          </select>
+        
+        <ul class="inlineList">
             <li v-for="track in tracks">
-                {{ track.text }}
+                <!--These elements need to be a single entitiy and not be in a line!-->
+                <div style="display: block;">
+                    <div>
+                        {{ track.track_name }} {{track.artist_name}}
+                    </div>
+                    <div>
+                        <img :src="track.image.url">
+                    </div>
+                    <p>Preview of track</p>
+                    <div>
+                        <audio controls>
+                            <source :src=track.preview_url type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
             </li>
-        </ol>
+        </ul>
     </div>
 
+    <h3>Search for a track and get recomendations based on it!</h3>
     <div id="get-recomendations">
         <input v-model="searchString">
         <button v-on:click="searchForTrackName">Search for Track name</button>
         <ol>
             <li v-for="track in tracks" v-bind:key="track.id">
                 {{ track.text }}
-                <button v-on:click="generateRecomendations(track.id)">Recomendations for track name</button>
+                <button v-on:click="generateRecomendationsForTrack(track.id)">Recomendations for track name</button>
                 <ul>
                     <li v-for="recomendation in track.recomendations" v-bind:key="recomendation.id">
                         {{recomendation.text}}
