--- a/login/login.html
+++ b/login/login.html
@@ -1,17 +1,23 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="login.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
 
-    <h1>Spotify API Stuff</h1>
+    <h1 class="topTitle">Find out what your top played tracks and genres are on Spotify!</h1>
 
-    <h2>First login with spotify</h2>
-    <div id="user-login">
-        <a v-bind:href=link>Open spotify login screen</a>
+    <div id="user-login" class="loginLink">
+        <a v-bind:href=link class="pseudoButton">Please login with spotify</a> 
+    </div>
+
+    <div class="footer">
+        <h5>About</h5>
+        <p>This website uses a readonly connection to Spotify's public API to find your most played tracks and genres</p>
+        <p>It can also generate recomendations based on those songs</p>
+        <p>And maybe one day export playlists and things</p>
     </div>
 
     <script src="login.js"></script>
